--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
 
   </div>
 </div>
-<h1 id="supa">Drawing Identification
+<h1 id="supa">Quick Draw
 <button id="show_sketch" class="btn btn-info" data-toggle="modal" data-target="#myModal">Show Sketch</button>
 </h1>
-<p id="cool" class="btn btn-success">Answer: </p> <br>
+<p id="cool" class="btn btn-success">Your Sketch: </p> <br>
 <p id="accuracy" class="btn btn-success">Assurance: </p> <br>
+<p id="sketchtobe" class="btn btn-success">Sketch to be drawn</p><br>   
 <hr id="amogus">
+<span>Score:</span>
+<span>Timer:</span>
 <br>
 <button class="btn btn-warning" onclick="clear()">Clear Canvas</button>
 <br>
